init.d-posix: make all simulation airframes simulator specific